# jit.gl.isf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ISF/: LICENSE.txt  package-info.json
ISF/docs/refpages/: jit.gl.isf.maxref.xml
ISF/help/: jit.gl.isf.maxhelp
ISF/javascript/: jit_gl_isf_controller.js  reltoabspath.js
ISF/patchers/: FFT_Color_Lines.fs  ISF_UI_item.maxpat  ISF_UI_stack.maxpat  jit.gl.isf_audio.maxpat  jit.gl.isf_filter.maxpat
jit.gl.isf/: jit.gl.isf.sln  jit.gl.isf.vcxproj  max_extern_common.props
jit.gl.isf/jit.gl.isf/: ISFRendererImpl.cpp  Info.plist  MyBuffer.cpp  MyBuffer.hpp  MyBufferImpl.cpp  MyBufferImpl.hpp  VVGLContextCacheItem.hpp  jit.gl.isf.cpp  jit.gl.isf.h  max.jit.gl.isf.cpp  max.jit.gl.isf.h  maxmspsdk.xcconfig
jit.gl.isf/jit.gl.isf.xcodeproj/: project.pbxproj
jit.gl.isf/jit.gl.isf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
jit.gl.isf/jit.gl.vvisf/: ISFFileManager.hpp  ISFFileManager_Mac.mm  ISFFileManager_Win.cpp  ISFRendererImpl.cpp  maxmspsdk.xcconfig
jit.gl.vvisf/: ISFFile.hpp  jit.gl.vvisf.sln  jit.gl.vvisf.vcxproj
jit.gl.vvisf/jit.gl.vvisf/: ISFFile.cpp  ISFFile.hpp  ISFFileManager.cpp  ISFFileManager.hpp  ISFFileManager_Mac.hpp  ISFFileManager_Mac.mm  ISFFileManager_Win.cpp  ISFFileManager_Win.hpp  ISFRenderer.cpp  ISFRenderer.hpp  ISFRendererImpl.cpp  ISFRendererImpl.hpp  MyBuffer.cpp  MyBuffer.hpp  MyBufferImpl.cpp  VVGLContextCacheItem.cpp  VVGLContextCacheItem.hpp  VVGLContextCacheItem.mm  VVGLContextCacheItemImpl.cpp  VVGLContextCacheItemImpl.hpp  jit.gl.vvisf.cpp  jit.gl.vvisf.h  jit.gl.vvisf.m  jit.gl.vvisf.mm  max.jit.gl.vvisf.c  max.jit.gl.vvisf.cpp  max.jit.gl.vvisf.h  maxmspsdk.xcconfig
jit.gl.vvisf/jit.gl.vvisf.xcodeproj/: project.pbxproj
projects/: jit.gl.isf.sln  jit.gl.isf.vcxproj  max_extern_common.props
projects/jit.gl.isf/: CMakeLists.txt  ISFFile.cpp  ISFFile.hpp  ISFFileManager_Win.hpp  ISFRenderer.hpp  ISFRendererImpl.cpp  MyBuffer.cpp  MyBuffer.hpp  MyBufferImpl.cpp  MyBufferImpl.hpp  VVGLContextCacheItemImpl.cpp  jit.gl.isf.cpp  macho-gl-prefix.pch
projects/jit.gl.isf.xcodeproj/: project.pbxproj
projects/jit.gl.isf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
